2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Use kwargs more.

2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Clean up whitespace.

2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Remove unused import.

2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/lists.py:
	  Add logging.

2012-05-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/mushin-maemo:
	* python/mushin/maemo/main.py:
	  Move pjson mangling to avoid the reactor.

2012-05-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Pass options as actual options.

2012-05-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/mushin-maemo:
	  Verify we run non-strict.

2012-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  reverse id.

2011-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Trap couchdb web errors.

2011-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Handle failures better with a final fallback so the program exits.

2011-08-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	  Make it easier to use for other projects.

2011-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  No more than 80 chars.

2011-04-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Now that id's are unicode, encode them to utf-8 before doing stdout.

2011-04-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/extern/__init__.py:
	  Put paisley on PYTHONPATH.

2011-04-18  Thomas Vander Stichele  <thomas at apestaart dot org>
