@@ -1,3 +1,8 @@
+2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/common/logcommand.py:
+	  Hook up warning and error too.
+
 2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/common/app.py:
